syntax = "proto3";

package strims.rpc.test;

option go_package = "github.com/MemeLabs/protobuf/pkg/apis/rpc/test;test";
option java_package = "org.memelabs.protobuf.rpc.test";
option swift_prefix = "SRT";

message RPCCallUnaryRequest {
  uint64 id = 1;
}

message RPCCallUnaryResponse {
  uint64 id = 1;
}

message RPCCallStreamRequest {
  uint64 id = 1;
  uint64 count = 2;
}

message RPCCallStreamResponse {
  uint64 id = 1;
}

service RPCTest {
  rpc CallUnary(RPCCallUnaryRequest) returns (RPCCallUnaryResponse);
  rpc CallStream(RPCCallStreamRequest) returns (stream RPCCallStreamResponse);
}

message TestMessage {
  enum TestEnum {
    TEST_ENUM_VAL_0 = 0;
    TEST_ENUM_VAL_1 = 1;
    TEST_ENUM_VAL_2 = 2;
  }

  int32 int32_value = 1;
  int64 int64_value = 2;
  uint32 uint32_value = 3;
  uint64 uint64_value = 4;
  sint32 sint32_value = 5;
  sint64 sint64_value = 6;
  bool bool_value = 7;
  TestEnum enum_value = 8;
  fixed64 fixed64_value = 9;
  sfixed64 sfixed64_value = 10;
  double double_value = 11;
  string string_value = 12;
  bytes bytes_value = 13;
  fixed32 fixed32_value = 14;
  sfixed32 sfixed_value = 15;
  float float_value = 16;
}
